- generified project (1. step) - reviewd some parts - fixed various small bugs - identation - added SearchPlanBackend (for Veits new planing-matcher), still alpha